# PasswordManager

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  addTaget.cmake  launch.vs.json  resource_template.rc.in
ApiProxyLib/: CMakeLists.txt
ApiProxyLib/ApiProxy/: ApiProxy.cpp  ApiProxy.h
ApiProxyLib/ApiProxyMethod/: ApiProxyMethod.h
ApiProxyLib/Interfaces/: IApiProxy.h  IApiProxyMethod.h
ApplicationControllerLib/: CMakeLists.txt
ApplicationControllerLib/ApplicationController/: ApplicationController.cpp  ApplicationController.h  HandleSetMasterPassword.cpp
ApplicationControllerLib/ApplicationSettings/: ApplicationSettings.cpp  ApplicationSettings.h
ApplicationControllerLib/Enums/: Action.h
ApplicationControllerLib/Interfaces/: IApiProxy.h  IApplicationSettings.h  ICommandLineParser.h  IDataStream.h
DataBaseLib/: CMakeLists.txt
DataBaseLib/DataBaseConnectionSQL/: DataBaseConnectionSQL.cpp  DataBaseConnectionSQL.h
DataBaseLib/Interfaces/: IDataBaseConnection.h  IQuery.h
DataBaseLib/QuerySQL/: QuerySQL.cpp  QuerySQL.h
DataBaseLib/TransactionManagerSQL/: TransactionGuard.cpp  TransactionManagerSQL.cpp  TransactionManagerSQL.h
DataBaseLibTest/: CMakeLists.txt  DataBaseConnectionSQLTest.cpp  QuerySQLTest.cpp  TransactionManagerSQLTest.cpp
EncryptionLib/: CMakeLists.txt
EncryptionLib/CryptoHash/: CryptoHash.cpp  CryptoHash.h
EncryptionLib/CryptoHashQt/: CryptoHashQt.cpp  CryptoHashQt.h
EncryptionLib/EmptyEncryptor/: EmptyEncryptor.h
EncryptionLib/EncryptionLibTest/: CMakeLists.txt  XOREncryptorTest.cpp
EncryptionLib/Interfaces/: ICryptoHash.h
EncryptionLib/SimpleKeyProvider/: SimpleKeyProvider.cpp  SimpleKeyProvider.h
EncryptionLib/XOREncryptor/: XOREncryptor.cpp  XOREncryptor.h
JsonToolsLib/: CMakeLists.txt
JsonToolsLib/JsonFactory/: JsonFactory.cpp
JsonToolsLib/JsonSerialize/: JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializeFactory.cpp  JsonSerializeFactory.h  JsonSerializer.cpp  JsonSerializer.h
JsonToolsLib/ReaderJson/: ReaderJson.cpp  ReaderJson.h
JsonToolsLib/ReaderQJson/: ReaderQJson.cpp  ReaderQJson.h
JsonToolsLib/WriterJson/: WriterJson.cpp  WriterJson.h
JsonToolsLib/WriterQJson/: WriterQJson.cpp  WriterQJson.h
JsonToolsLibTest/: CMakeLists.txt  ReaderJsonTest.cpp  ReaderQJsonTest.cpp  WriterJsonTest.cpp  WriterQJsonTest.cpp  resources.qrc
JsonToolsLibTest/tests/: Incorrect.json  Values.json
LoggingLib/: CMakeLists.txt  Log.cpp  Log.h
LoggingLib/EmptyLog/: EmptyLog.cpp  EmptyLog.h
LoggingLib/Interfaces/: ILog.h
LoggingLib/LogFactory/: LogFactory.cpp  LogFactory.h
LoggingLib/StreamLog/: StreamLog.cpp  StreamLog.h
PasswordApiApplication/: CMakeLists.txt  main.cpp
PasswordApiApplication/ApiProxyMethodExecuter/: ApiProxyMethodExecuter.h
PasswordApiApplication/ApplicationController/: ApplicationController.cpp  ApplicationController.h
PasswordApiApplication/ApplicationSettings/: ApplicationSettings.h
PasswordApiApplication/CommandLineParserQt/: CommandLineParserQt.cpp  CommandLineParserQt.h
PasswordApiApplication/Mediator/: Mediator.cpp  Mediator.h
PasswordApiApplication/Streams/: StandartStreamsWrapper.cpp  StandartStreamsWrapper.h
PasswordGeneratorLib/: CMakeLists.txt  PasswordComponents.h
PasswordGeneratorLib/Interfaces/: IPasswordGenerator.h
PasswordGeneratorLib/SimpleGenerator/: SimpleGenerator.cpp  SimpleGenerator.h
PasswordGeneratorLibTest/: CMakeLists.txt  SimpleGeneratorTest.cpp
PasswordKit/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PasswordKit.cmake  PasswordKit.qrc  main.cpp
PasswordKit/ApiProxy/: ApiProxy.cpp  ApiProxy.h
PasswordKit/ApiProxyMethod/: ApiProxyMethod.h
PasswordKit/ApiProxyMethodExecuter/: ApiProxyMethodExecuter.cpp  ApiProxyMethodExecuter.h
PasswordKit/Application/: Application.cpp  Application.h
PasswordKit/ApplicationController/: ApplicationController.cpp  ApplicationController.h
PasswordKit/ApplicationSettings/: ApplicationSettings.cpp  ApplicationSettings.h  ApplicatonSettingsJsonImpl.cpp  ApplicatonSettingsJsonImpl.h
PasswordKit/ApplicationsSettings/: ApplicationSettings.cpp  ApplicationSettings.h
PasswordKit/CommandLineParserQt/: CommandLineParserQt.cpp  CommandLineParserQt.h
PasswordKit/Enums/: Action.h
PasswordKit/Interfaces/: IApiProxy.h  IApiProxyMethod.h  IApplicationSettings.h  ICommandLineParser.h  IDataStream.h
PasswordKit/Mediator/: Mediator.cpp  Mediator.h
PasswordKit/Streams/: StandartStreamsWrapper.cpp  StandartStreamsWrapper.h
PasswordLogicApiInfoLib/: ApiParameters.cpp  ApiParameters.h  CMakeLists.txt
PasswordLogicLib/: CMakeLists.txt
PasswordLogicLib/AccountInfo/: AccountInfo.cpp  AccountInfo.h  AccountInfoDec.h
PasswordLogicLib/CredentialsInspector/: CredentialsInspector.cpp  CredentialsInspector.h
PasswordLogicLib/DataContainer/: AccountsDataContainer.cpp  AccountsDataContainer.h  EncryptedDataContainer.cpp  EncryptedDataContainer.h
PasswordLogicLib/DataController/: DataController.cpp  DataController.h
PasswordLogicLib/DataSource/: DataBaseArtifacts.h  DataBaseCreator.cpp  DataBaseDataSource.cpp  DataBaseDataSource.h  DataBaseDataSourceImpl.cpp  DataBaseDataSourceImpl.h  DataBaseMigrator.cpp  DataBaseMigrator.h
PasswordLogicLib/Interfaces/: IDataContainer.h  IDataController.h  IDataSource.h  IPasswordApi.h
PasswordLogicLib/PasswordApi/: PasswordApi.cpp  PasswordApi.h
PasswordLogicLibTest/: AccountsDataContainerTest.cpp  CMakeLists.txt
PasswordUiApplication/: CMakeLists.txt  main.cpp
PasswordUiApplication/Api/: Api.cpp  Api.h
PasswordUiApplication/MainWindow/: MainWindow.cpp  MainWindow.h
PasswordUiApplication/Resources/: style.qss
ProcessExecuterLib/: CMakeLists.txt
ProcessExecuterLib/Interfaces/: IProcessExecuter.h
ProcessExecuterLib/QtProcessExecuter/: QtProcessExecuter.cpp  QtProcessExecuter.h
ToolsLib/: CMakeLists.txt
ToolsLib/CommandLineParser/: CommandLineParser.cpp  CommandLineParser.h  ICommandLineParser.h
ToolsLibTest/: CMakeLists.txt  CommandLineParserTest.cpp  SameTest.cpp  StreamWrapperTest.cpp  StringFormatTest.cpp
(+246 files in other folders)
